# research-synthesizer

./: .gitignore  CLAUDE.md  README.md  claude_cli.py  main.py  mcp_server.py  pyproject.toml  report.md  requirements.txt  researcher.py  supervisor.py  tools.py
.claude/: mcp_config.json  settings.json
.claude/commands/: research.md  test-agents.md
.claude/hooks/: post_tool_use.sh  pre_tool_use.sh
tests/: test_cli.py  test_supervisor.py  test_tools.py
