[project]
name = "research-synthesizer"
version = "0.1.0"
description = "Multi-agent research synthesizer — claude CLI + DuckDuckGo, no API key"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.14.4",
    "mcp>=1.27.1",
    "rich>=13.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
